# teranium-sdk

./: LICENSE  README.md  package-lock.json  package.json
anchor/: Anchor.toml
anchor/programs/teranium/: Cargo.toml
anchor/programs/teranium/src/: lib.rs
apps/integrator/: package.json
apps/integrator/app/: layout.tsx  page.tsx  providers.tsx
apps/integrator/app/components/: AppShell.tsx
idl/: teranium.json
security/: SECURITY_CHECKLIST.md
